src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AgentId__c</fullName>
        <label>AgentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>CallType</label>
        <picklist>
            <picklistValues>
                <fullName>OTHER_IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TICKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CorrelationData__c</fullName>
        <label>CorrelationData</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CrmIdId__c</fullName>
        <label>CrmIdId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialed_Number__c</fullName>
        <label>Dialed Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternalCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInternalCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerVar10__c</fullName>
        <label>PerVar10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerVar1__c</fullName>
        <label>PerVar1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerVar2__c</fullName>
        <label>PerVar2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedWrapupReason__c</fullName>
        <label>SelectedWrapupReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>OFFERED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRAPUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAUSED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>